--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,23 @@
-# unbind default prefix and set it to ctrl-a
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-
 # make delay shorter
 set -sg escape-time 0
 
+# ウィンドウのインデックスを1から始める
+set -g base-index 1
+
+# ペインのインデックスを1から始める
+setw -g pane-base-index 1
 
 
 #### key bindings ####
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+
+# | でペインを縦に分割する
+bind | split-window -h
+
+# - でペインを横に分割する
+bind - split-window -v
 
 # quickly open a new window
 bind N new-window
@@ -26,7 +32,6 @@ bind k select-pane -U
 bind l select-pane -R
 
 # enable mouse support for switching panes/windows
-set -g mouse-utf8 on
 set -g mouse on
 
 
@@ -39,9 +44,38 @@ setw -g mode-keys vi
 unbind [
 bind Escape copy-mode
 
-# start selection with 'space' and copy using 'y'
-bind -t vi-copy 'y' copy-selection
-
 # paste using 'p'
 unbind p
 bind p paste-buffer
+
+# コピーモードの操作をvi風に設定する
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+
+#### color and status bar ####
+
+# 256色端末を使用する
+set -g default-terminal "screen-256color"
+
+# ステータスバーの色を設定する
+set -g status-fg white
+set -g status-bg black
+
+# ステータスバーを設定する
+## 左パネルを設定する
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+## 右パネルを設定する
+set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+## リフレッシュの間隔を設定する(デフォルト 15秒)
+set -g status-interval 60
+## ウィンドウリストの位置を中心寄せにする
+set -g status-justify centre
+## ヴィジュアルノーティフィケーションを有効にする
+setw -g monitor-activity on
+set -g visual-activity on
+## ステータスバーを上部に表示する
+set -g status-position top
