--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,9 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 
+# tmux 上でクリップボードを使えるようにする
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # コピーモードの操作をvi風に設定する
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
